--- a/app/src/main/res/drawable/icon_google.xml
+++ b/app/src/main/res/drawable/icon_google.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="60"
-    android:viewportWidth="60" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FFFFFF" android:pathData="M0,60h60V0H0V60zM30.2,15.4c3.6,0 7,1.4 9.5,3.8c-2.9,2.9 -2.8,3 -4.1,4.1c-1.5,-1.3 -3.1,-2.1 -5.4,-2.1c-4.6,0 -8.3,3.8 -8.3,8.5s3.6,8.5 8.3,8.5c4.5,0 6.6,-2 7.8,-5.7c-2.3,0 -7.5,0 -7.5,0v-4.8h13.3c0.9,6.9 -1.9,16.9 -13.6,16.9c-7.8,0 -14.2,-6.7 -14.2,-14.6S22.4,15.4 30.2,15.4z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:fillColor="@color/colorTextLight"
+      android:pathData="M12.24,10.285V14.4h6.806c-0.275,1.765 -2.056,5.174 -6.806,5.174 -4.095,0 -7.439,-3.389 -7.439,-7.574s3.345,-7.574 7.439,-7.574c2.33,0 3.891,0.989 4.785,1.849l3.254,-3.138C18.189,1.186 15.479,0 12.24,0c-6.635,0 -12,5.365 -12,12s5.365,12 12,12c6.926,0 11.52,-4.869 11.52,-11.726 0,-0.788 -0.085,-1.39 -0.189,-1.989H12.24z"/>
 </vector>
