--- a/app/src/main/res/layout/sign_in_forgot_password_dialog.xml
+++ b/app/src/main/res/layout/sign_in_forgot_password_dialog.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view_SIFPD"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -10,89 +9,83 @@
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:theme="@style/NoActionBarTheme"
-    app:cardBackgroundColor="?attr/cardBackgroundColor"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="0dp">
+    android:background="@drawable/round_dialog"
+    android:orientation="vertical"
+    android:id="@+id/linear_layout_SIFPD">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/image_view_close_SIFPD"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_gravity="end"
+        android:layout_marginEnd="5dp"
+        android:layout_marginTop="5dp"
+        android:contentDescription="@string/close"
+        app:srcCompat="@drawable/icon_close" />
+
+    <TextView
+        android:id="@+id/text_view_title_SIFPD"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
+        android:text="@string/forgot_password"
+        android:textAlignment="center"
+        android:textSize="18sp" />
 
-        <ImageView
-            android:id="@+id/image_view_close_SIFPD"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_gravity="end"
-            android:layout_marginEnd="5dp"
-            android:layout_marginTop="5dp"
-            android:contentDescription="@string/close"
-            app:srcCompat="@drawable/icon_close" />
+    <View
+        android:id="@+id/view_divider_SIFPD"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
+        android:background="?attr/colorPrimaryDark" />
 
-        <TextView
-            android:id="@+id/text_view_title_SIFPD"
+    <TextView
+        android:id="@+id/text_view_message_SIFPD"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:text="@string/forgot_password_dialogue"
+        android:textAlignment="center"
+        android:textColor="?attr/colorPrimaryDark"
+        android:textSize="12sp" />
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/text_input_layout_email_SIFPD"
+        android:layout_width="match_parent"
+        android:layout_height="84dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/edit_text_email_SIFPD"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="5dp"
-            android:text="@string/forgot_password"
-            android:textAlignment="center"
-            android:textSize="18sp" />
-
-        <View
-            android:id="@+id/view_divider_SIFPD"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="5dp"
-            android:background="?attr/colorPrimaryDark" />
-
-        <TextView
-            android:id="@+id/text_view_message_SIFPD"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:text="@string/forgot_password_dialogue"
-            android:textAlignment="center"
-            android:textColor="?attr/colorPrimaryDark"
-            android:textSize="12sp" />
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/text_input_layout_email_SIFPD"
-            android:layout_width="match_parent"
-            android:layout_height="84dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="5dp">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/edit_text_email_SIFPD"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawablePadding="10dp"
-                android:drawableStart="@drawable/icon_email_selected"
-                android:hint="@string/email"
-                android:imeOptions="actionDone"
-                android:inputType="textEmailAddress|textNoSuggestions"
-                android:maxLines="1"
-                android:textSize="16sp" />
-        </android.support.design.widget.TextInputLayout>
-
-        <Button
-            android:id="@+id/button_submit_SIFPD"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:text="@string/submit"
+            android:drawablePadding="10dp"
+            android:drawableStart="@drawable/icon_email_selected"
+            android:hint="@string/email"
+            android:imeOptions="actionDone"
+            android:inputType="textEmailAddress|textNoSuggestions"
+            android:maxLines="1"
             android:textSize="16sp" />
+    </android.support.design.widget.TextInputLayout>
 
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+    <Button
+        android:id="@+id/button_submit_SIFPD"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/submit"
+        android:textSize="16sp" />
+
+</LinearLayout>
