--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraint_layout_SIF"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorTransparent"
@@ -10,17 +10,17 @@
     android:focusable="true"
     android:focusableInTouchMode="true"
     tools:context=".Landing.SignInFragment"
-    tools:layout_editor_absoluteY="56dp">
+    tools:layout_editor_absoluteY="56dp"
+    android:id="@+id/constraint_layout_SIF">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/text_input_layout_email_SIF"
         android:layout_width="match_parent"
-        android:layout_height="84dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/text_input_layout_password_SIF"
+        app:layout_constraintBottom_toTopOf="@+id/linerar_layout_1_SIF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -36,37 +36,61 @@
             android:textSize="16sp" />
     </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/text_input_layout_password_SIF"
-        android:layout_width="match_parent"
-        android:layout_height="84dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/linear_layout_SIF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email_SIF"
-        app:passwordToggleDrawable="@drawable/icon_password_visibility_selected"
-        app:passwordToggleEnabled="true"
-        app:passwordToggleTint="?attr/colorPrimaryDark">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/edit_text_password_SIF"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawablePadding="10dp"
-            android:drawableStart="@drawable/icon_password_selected"
-            android:hint="@string/password"
-            android:imeOptions="actionDone"
-            android:inputType="textPassword|textNoSuggestions"
-            android:maxLines="1"
-            android:textSize="16sp" />
-    </android.support.design.widget.TextInputLayout>
-
 
     <LinearLayout
-        android:id="@+id/linear_layout_SIF"
+        android:id="@+id/linerar_layout_1_SIF"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/linerar_layout_2_SIF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email_SIF">
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/text_input_layout_password_SIF"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:passwordToggleDrawable="@drawable/icon_password_visibility_selected"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="?attr/colorPrimaryDark"
+            tools:layout_editor_absoluteX="20dp"
+            tools:layout_editor_absoluteY="147dp">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/edit_text_password_SIF"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawablePadding="10dp"
+                android:drawableStart="@drawable/icon_password_selected"
+                android:hint="@string/password"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword|textNoSuggestions"
+                android:maxLines="1"
+                android:textSize="16sp" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/button_forgot_password_SIF"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:background="@color/colorTransparent"
+            android:text="@string/forgot_password"
+            android:textAllCaps="false"
+            android:layout_gravity="center"
+            android:textColor="?attr/colorAccent"
+            tools:layout_editor_absoluteX="20dp"
+            tools:layout_editor_absoluteY="262dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linerar_layout_2_SIF"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
@@ -74,9 +98,8 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/text_view_or_SIF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password_SIF">
+        app:layout_constraintTop_toBottomOf="@+id/linerar_layout_1_SIF">
 
         <Button
             android:id="@+id/button_sign_in_SIF"
@@ -86,59 +109,35 @@
             android:text="@string/sign_in"
             android:textSize="16sp"
             tools:layout_editor_absoluteX="20dp"
-            tools:layout_editor_absoluteY="285dp" />
+            tools:layout_editor_absoluteY="323dp" />
 
-        <LinearLayout
-            android:id="@+id/linear_layout_2_SIF"
+        <Button
+            android:id="@+id/button_continue_guest_SIF"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/button_forgot_password_SIF"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_weight="1"
-                android:background="@color/colorTransparent"
-                android:text="@string/forgot_password"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textColor="?attr/colorAccent"
-                tools:layout_editor_absoluteX="20dp"
-                tools:layout_editor_absoluteY="371dp" />
-
-            <Button
-                android:id="@+id/button_continue_guest_SIF"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_weight="1"
-                android:background="@color/colorTransparent"
-                android:text="@string/continue_guest"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textColor="?attr/colorAccent"
-                tools:layout_editor_absoluteX="202dp"
-                tools:layout_editor_absoluteY="371dp" />
-        </LinearLayout>
-
+            android:layout_weight="1"
+            android:background="@color/colorTransparent"
+            android:text="@string/no_account_continue_guest"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="?attr/colorAccent"
+            tools:layout_editor_absoluteX="20dp"
+            tools:layout_editor_absoluteY="402dp" />
     </LinearLayout>
 
     <View
         android:id="@+id/view_1_SIF"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
         android:background="?attr/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="@+id/text_view_or_SIF"
         app:layout_constraintEnd_toStartOf="@+id/text_view_or_SIF"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/text_view_or_SIF"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="@+id/text_view_or_SIF" />
 
     <TextView
         android:id="@+id/text_view_or_SIF"
@@ -150,54 +149,43 @@
         app:layout_constraintEnd_toStartOf="@+id/view_2_SIF"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/view_1_SIF"
-        app:layout_constraintTop_toBottomOf="@+id/linear_layout_SIF" />
+        app:layout_constraintTop_toBottomOf="@+id/linerar_layout_2_SIF" />
 
     <View
         android:id="@+id/view_2_SIF"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
         android:background="?attr/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="@+id/text_view_or_SIF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/text_view_or_SIF"
-        app:layout_constraintTop_toTopOf="@+id/text_view_or_SIF"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="@+id/text_view_or_SIF" />
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/button_facebook_SIF"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="20dp"
-        android:drawablePadding="20dp"
-        android:drawableStart="@drawable/icon_facebook"
-        android:text="@string/facebook"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textSize="16sp"
+        android:layout_width="46dp"
+        android:layout_height="46dp"
+        android:clickable="true"
+        android:src="@drawable/icon_facebook"
+        android:scaleType="center"
+        android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_google_SIF"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_view_or_SIF" />
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/button_google_SIF"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="10dp"
-        android:drawablePadding="20dp"
-        android:drawableStart="@drawable/icon_google"
-        android:text="@string/google"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textSize="16sp"
+        android:layout_width="46dp"
+        android:layout_height="46dp"
+        android:clickable="true"
+        android:src="@drawable/icon_google"
+        android:scaleType="center"
+        android:focusable="true"
         app:layout_constraintBottom_toBottomOf="@+id/button_facebook_SIF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
