--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -1,45 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/linear_layout_SA"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="?attr/colorPrimary"
-android:fitsSystemWindows="true"
-android:orientation="vertical"
-tools:context=".Settings.SettingsActivity">
-
-<android.support.v7.widget.Toolbar
-    android:id="@+id/toolbar_SA"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:layout_gravity="top"
+    android:layout_height="match_parent"
     android:background="?attr/colorPrimary"
-    android:elevation="0dp"
-    app:theme="@style/NoActionBarTheme">
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
+    tools:context=".Settings.SettingsActivity"
+    android:id="@+id/linear_layout_SA" >
 
-    <TextView
-        android:id="@+id/toolbar_title_SA"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="4dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="@string/settings"
-        android:textAllCaps="true"
-        android:textSize="30sp" />
-</android.support.v7.widget.Toolbar>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_SA"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_gravity="top"
+        android:background="?attr/colorPrimary"
+        android:elevation="0dp"
+        app:theme="@style/NoActionBarTheme">
 
-<View
-    android:id="@+id/view_divider_SA"
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="?attr/colorPrimaryDark" />
+        <TextView
+            android:id="@+id/toolbar_title_SA"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="@string/settings"
+            android:textAllCaps="true"
+            android:textSize="30sp" />
 
-<android.support.v4.view.ViewPager
-    android:id="@+id/view_pager_SA"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    </android.support.v7.widget.Toolbar>
+
+    <View
+        android:id="@+id/view_divider_SA"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?attr/colorPrimaryDark" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager_SA"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
