--- a/app/src/main/res/layout/new_task_activity.xml
+++ b/app/src/main/res/layout/new_task_activity.xml
@@ -66,7 +66,7 @@
         </android.support.v7.widget.Toolbar>
 
         <LinearLayout
-            android:id="@+id/linear_layout_1_NTA"
+            android:id="@+id/card_holder_1_NTA"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical" />
