--- a/app/src/main/res/layout/new_task_card_1.xml
+++ b/app/src/main/res/layout/new_task_card_1.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/linear_layout_NTC1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp"
     android:layout_marginTop="20dp"
     android:background="@drawable/round_dialog"
+    android:clickable="true"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:fitsSystemWindows="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/linear_layout_NTC1" >
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/text_input_layout_task_name_NTC1"
@@ -16,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp" >
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/edit_text_task_name_NTC1"
@@ -45,7 +48,8 @@
             android:lines="3"
             android:maxLines="3"
             android:minLines="3"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:gravity="top|start"/>
     </android.support.design.widget.TextInputLayout>
 
 
@@ -53,7 +57,7 @@
         android:id="@+id/text_view_task_type_NTC1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="6dp"
+        android:layout_marginBottom="5dp"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
