--- a/app/src/main/res/layout/new_task_card_1.xml
+++ b/app/src/main/res/layout/new_task_card_1.xml
@@ -57,7 +57,6 @@
         android:id="@+id/text_view_task_type_NTC1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
@@ -71,8 +70,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="20dp"
         android:popupBackground="@color/colorBackground"
         android:textSize="16sp" />
-
 </LinearLayout>
