--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:theme="@style/NoActionBarTheme"
     android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,7 +14,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_MA"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:background="?attr/colorPrimary">
 
@@ -36,17 +35,17 @@
             android:layout_gravity="end"
             android:layout_marginEnd="4dp"
             android:layout_marginStart="0dp"
-            app:icon_type="Heart"
+            app:anim_scale_factor="2"
+            app:circle_end_color="?attr/colorAccent"
             app:circle_start_color="@color/colorTextLight"
-            app:like_drawable="@drawable/icon_heart_focused"
-            app:unlike_drawable="@drawable/icon_heart"
             app:dots_primary_color="?attr/colorAccent"
             app:dots_secondary_color="@color/colorTextLight"
-            app:circle_end_color="?attr/colorAccent"
             app:icon_size="25dp"
+            app:icon_type="Heart"
+            app:is_enabled="true"
+            app:like_drawable="@drawable/icon_heart_focused"
             app:liked="false"
-            app:anim_scale_factor="2"
-            app:is_enabled="true"/>
+            app:unlike_drawable="@drawable/icon_heart" />
 
     </android.support.v7.widget.Toolbar>
 
